recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:6: error: value -= is not a member of Int
	steps -= 1
              ^Spiral:7: error: reassignment to val
	length = length + increment
               ^