recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {

	avance(length)
	gauche(angle)
	steps -= 1
	length = length + increment

	if (steps == 0) {
		return
	}
	else {
		spiral(steps,angle,length,increment)
	}
	
}
